changed country location

--- a/cart.html
+++ b/cart.html
@@ -16,7 +16,7 @@
             <img src="images/location_icon.png" height="20px">
             <div>
                 <p>Deliver to</p>
-                <h1>India</h1>
+                <h1>New York</h1>
             </div>
         </div>
         <div class="nav-search">
